--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
               "src/styles.css",
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
